work for admin panel and OT room

--- a/project/user/templates/user/index.html
+++ b/project/user/templates/user/index.html
@@ -90,7 +90,7 @@
     {% if user.is_authenticated %}
     <center><h1>welcome back {{user.username}}!</h1>
       <form action="/action_page.php">
-        <label for="room type">Room detail</label><br>
+        <label for="room type">Surgery type</label><br>
         <input type="text" id="room type" name="room type"><br>
         <label for="Date"> Date</label><br>
         <input type="date" id="Date" name="Date"><br>
