--- a/project/user/templates/user/index.html
+++ b/project/user/templates/user/index.html
@@ -91,7 +91,7 @@
     <center><h1>welcome back {{user.username}}!</h1>
       <form action="/action_page.php">
         <label for="room type">Surgery type</label><br>
-        <input type="text" id="room type" name="room type"><br>
+        <input type="text" id="room type" name="surgery type"><br>
         <label for="Date"> Date</label><br>
         <input type="date" id="Date" name="Date"><br>
         <label for="time">Time</label>    <br>
